[gd_scene load_steps=7 format=3 uid="uid://bhg76h6xybj5g"]

[ext_resource type="Script" path="res://scripts/mobile_controls.gd" id="1_hnhgw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1hftj"]
bg_color = Color(0.2, 0.2, 0.2, 0.5)
corner_radius_top_left = 90
corner_radius_top_right = 90
corner_radius_bottom_right = 90
corner_radius_bottom_left = 90

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m2nph"]
bg_color = Color(0.4, 0.4, 0.4, 0.7)
corner_radius_top_left = 90
corner_radius_top_right = 90
corner_radius_bottom_right = 90
corner_radius_bottom_left = 90

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n6hnx"]
bg_color = Color(0.6, 0.6, 0.6, 0.5)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7xbmd"]
bg_color = Color(0.0, 0.8, 1.0, 0.5)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t8q3x"]
bg_color = Color(0.4, 0.4, 0.4, 0.7)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="MobileControls" type="CanvasLayer"]
layer = 5
script = ExtResource("1_hnhgw")

[node name="Joystick" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(180, 180)
offset_right = 180.0
offset_bottom = 180.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1hftj")

[node name="Thumb" type="Panel" parent="Joystick"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_m2nph")

[node name="ActionButtons" type="HBoxContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -420.0
offset_top = -150.0
offset_right = -20.0
offset_bottom = -30.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 20
alignment = 1



[node name="ExtendButton" type="Button" parent="ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_n6hnx")
theme_override_styles/hover = SubResource("StyleBoxFlat_7xbmd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_t8q3x")
text = "E"

[node name="ShrinkButton" type="Button" parent="ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_n6hnx")
theme_override_styles/hover = SubResource("StyleBoxFlat_7xbmd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_t8q3x")
text = "Q"

[node name="PauseButton" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 70.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_n6hnx")
theme_override_styles/hover = SubResource("StyleBoxFlat_7xbmd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_t8q3x")
text = "II"
